fix horizontal alignment of stuff on score guide page, title

--- a/client/src/Styles/site.less
+++ b/client/src/Styles/site.less
@@ -8,8 +8,14 @@
   width: 100%;
 }
 
-.print-button-wrapper {
+.search-page-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   width: 100%;
+}
+
+.print-button-wrapper {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
